# MMSAT

./: .gitignore  CMakeLists.txt
src/: agregate.c  api.c  api.h  bench.c  bsparseconv.c  bsparseconv.h  constants.h  crypto_hash_sha512.c  formatc.c  formatc.h  hash.c  hash.h  key.c  ntt.c  ntt.h  pass.h  pass_types.h  poly.c  poly.h  randombytes.c  randombytes.h  rng.c  rng.h  sign.c  verify.c
